--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>component library</title>
 </head>
 <body>
+    <hr>
     <h1>Welcome to my component library</h1>
     <div>Animekh</div>
     <div>Phukan</div>
@@ -19,5 +20,41 @@
     <h3>links</h3>
     <a href="https://www.google.com/search?client=firefox-b-d&q=google">primary link</a>
     <a href="https://www.google.com/search?client=firefox-b-d&q=google">secondary link</a>
+    <hr/>
+    
+        <h2>here is my list</h2>
+        <h2>unOrderd list</h2>
+        <ul>
+            <li>item one</li>
+            <li>item two</li>
+            <li>item three </li>
+        </ul>
+    <hr>
+    <h2>Orderd list</h2>
+    <ol>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three </li>
+    </ol>
+    <hr>
+    <h2>@nav</h2>
+    <div>Brand</div>
+    <ul>
+        <li>
+            <a href="">Home</a>
+        </li>
+        <li>
+            <a href="">Product</a>
+        </li>
+        <li>
+            <a href="">About</a>
+        </li>
+    </ul>
+    <hr>
+    <h2>Header</h2>
+    <header>
+        <img src="images/web-developer-image.svg" alt="">
+        <h1>I am header</h1>
+    </header>
 </body>
 </html>
