sections and footer

--- a/index.html
+++ b/index.html
@@ -51,10 +51,29 @@
         </li>
     </ul>
     <hr>
-    <h2>Header</h2>
+    <h2>@Header</h2>
     <header>
         <img src="images/web-developer-image.svg" alt="">
         <h1>I am header</h1>
     </header>
+    <hr>
+    <h2>@Section</h2>
+    <section>
+    <h3>off white section</h3>
+    <p>This will have a white section </p>
+</section>
+<section>
+    <h3>off white section</h3>
+    <p>This will have a gray section </p>
+</section>
+
+<footer>
+    <div>Some small heading inside footer</div>
+    <ul>
+        <li>social1</li>
+        <li>social2</li>
+        <li>social3</li>
+    </ul>
+</footer>
 </body>
 </html>
