--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <h3>off white section</h3>
     <p>This will have a gray section </p>
 </section>
-
+<hr>
+<h2>@Footer</h2>
 <footer>
     <div>Some small heading inside footer</div>
     <ul>
