--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>component library</title>
+
 </head>
+    
+<link rel="stylesheet" href="styles.css">
 <body>
     <hr>
-    <h1>Welcome to my component library</h1>
+    <h1 id="para">Welcome to my component library</h1>
+
     <div>Animekh</div>
     <div>Phukan</div>
-    <p>lorem ipsum </p>
+    <p class="po"> lorem ipsum </p>
     <hr>
     <h2>lorem ipsum</h2>
     <p>text ijhdcgb ikhfhbs jbhs sikhbs jsbgvsd </p>
@@ -76,5 +80,29 @@
         <li>social3</li>
     </ul>
 </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
