--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <section>
     <h3>off white section</h3>
     <p>This will have a gray section </p>
+    <p>This will show in <strong>bold</strong> </p>
 </section>
 <hr>
 <h2>@Footer</h2>
