--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>component library</title>
+    <title>Flipkart</title>
 
 </head>
     
@@ -15,12 +15,13 @@
 
     <div>Animekh</div>
     <div>Phukan</div>
-    <p class="po"> lorem ipsum </p>
+    <p class="po"> Lorem ipsum </p>
     <hr>
     <h2>lorem ipsum</h2>
     <p>text ijhdcgb ikhfhbs jbhs sikhbs jsbgvsd </p>
     <h2>@containers</h2>
-    <div>fluid container and it will go till the  soecified output</div>
+    <h3>Fluid contaioner</h3>
+    <div> fluid container and it will go till the  soecified output</div>
     <h3>links</h3>
     <a href="https://www.google.com/search?client=firefox-b-d&q=google">primary link</a>
     <a href="https://www.google.com/search?client=firefox-b-d&q=google">secondary link</a>
